@@ -21,6 +21,14 @@ subscriber.receive(_) >> _
 
 JUnit Plafform 1.6 (https://junit.org/junit5/docs/5.6.0/release-notes/index.html#deprecations-and-breaking-changes[deprecated]) methods (from experimental API)  in `EngineExecutionResults` that Spock was using. To keep runtime compatibility with JUnit 5.6 and incoming 5.7 the implementation has been switched to the new methods. As a result, Spock 2.0-M3 cannot work with JUnit 5.5 and lower. The problem might only occur if a project overrides default JUnit Platform version provided by Spock.
 
+==== For extension developers
+
+- `FeatureInfo#getDataVariables()` and `FeatureInfo#getParameterNames()` used to return the
+  same value, the parameter names, in the order of the method parameters. This can disturb some calculations like method
+  argument determination and so on and is plainly wrong, as some parameters could be injected by extensions like
+  injecting mock objects or test proxies or similar. `FeatureInfo#getDataVariables()` now only returns the actual data
+  variables and in the order how they are defined in the `where` block.
+
 === Misc
 
 - Upgrade JUnit 4 to 4.13
